<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>dows-hep</artifactId>
        <groupId>org.dows.saas</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>hep-biz</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.dows.saas</groupId>
            <artifactId>hep-crud</artifactId>
        </dependency>
        <!--uim包-->
        <dependency>
            <groupId>org.dows.cloud</groupId>
            <artifactId>account-api</artifactId>
            <version>20230418-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dows.cloud</groupId>
            <artifactId>user-api</artifactId>
            <version>20230418-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.dows.cloud</groupId>
            <artifactId>rbac-api</artifactId>
            <version>20230418-SNAPSHOT</version>
        </dependency>
        <!--oss-->
        <dependency>
            <groupId>org.dows.framework</groupId>
            <artifactId>oss-boot</artifactId>
            <version>20230331-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
